--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -47,8 +47,22 @@
       "location": "в Форли, Италия.",
       "founder": "проф. Массимо Бузин",
       "procedures": "Наше отделение выполняет примерно",
-      "proceduresCount": "300 процедур кератопластики в год",
-      "surgeryTypes": "включая DALK, DMEK, DSAEK, UT-DSAEK, SALK и грибовидную кератопластику. Эти операции транслируются в прямом эфире через нашу стриминговую платформу."
+      "proceduresCount": "300 процедур кератопластики в год,",
+      "surgeryTypes": "включая DALK, Грибовидную Кератопластику, DSAEK, UT-DSAEK, DMEK и SALK."
+    },
+    "features": {
+      "hdStreaming": {
+        "title": "HD Видео Трансляция",
+        "description": "Смотрите операции в высоком качестве видео"
+      },
+      "liveInteraction": {
+        "title": "Живое Взаимодействие",
+        "description": "Получайте ответы непосредственно от хирурга"
+      },
+      "educationalResources": {
+        "title": "Образовательные Ресурсы",
+        "description": "Доступ к комплексным учебным материалам"
+      }
     }
   },
   "auth": {
@@ -93,31 +107,115 @@
     "enterPassword": "Пожалуйста, введите ваш пароль"
   },
   "recordings": {
-    "title": "Видеотека",
-    "searchPlaceholder": "Поиск видео...",
-    "filterByCategory": "Фильтр по категории",
+    "title": "Записи операций",
+    "subtitle": "Смотрите записанные хирургические процедуры от наших опытных хирургов",
+    "retry": "Повторить",
+    "selectVideo": "Выберите видео для воспроизведения",
+    "searchPlaceholder": "Поиск видео по названию или процедуре...",
     "allCategories": "Все категории",
-    "sortBy": "Сортировать по",
-    "newest": "Новейшие",
-    "oldest": "Старейшие",
-    "mostViewed": "Самые просматриваемые",
-    "refreshVideos": "Обновить видео"
+    "sortTitleAZ": "Название (А-Я)",
+    "sortCategory": "Категория",
+    "videoLibrary": "Видеотека",
+    "refreshing": "Обновление...",
+    "refreshVideos": "Обновить видео",
+    "noVideosFound": "Видео не найдено",
+    "tryAdjusting": "Попробуйте изменить поиск или фильтры",
+    "categories": {
+      "dalk": "DALK",
+      "dmek": "DMEK",
+      "dsaek": "DSAEK",
+      "utDsaek": "UT-DSAEK",
+      "mushroomPk": "Грибовидная кератопластика",
+      "educational": "Образовательное"
+    }
   },
   "publications": {
     "title": "Публикации",
-    "searchPlaceholder": "Поиск публикаций...",
+    "subtitle": "Исследуйте обширные исследовательские вклады проф. Массимо Бузина и коллег",
+    "loadingText": "Загрузка публикаций...",
+    "errorTitle": "Ошибка загрузки публикаций",
+    "tryAgain": "Попробовать снова",
+    "searchPlaceholder": "Поиск публикаций по названию, авторам или журналу...",
+    "allYears": "Все годы",
+    "allJournals": "Все журналы",
+    "clear": "Очистить",
+    "dateNewest": "Дата (сначала новые)",
+    "dateOldest": "Дата (сначала старые)",
+    "citationsMost": "Цитирования (больше всего первыми)",
+    "citationsLeast": "Цитирования (меньше всего первыми)",
+    "titleAZ": "Название (А-Я)",
+    "titleZA": "Название (Я-А)",
+    "journalAZ": "Журнал (А-Я)",
+    "journalZA": "Журнал (Я-А)",
+    "scopusMetrics": "Метрики Scopus",
+    "totalPublications": "Всего публикаций",
+    "yearsActive": "Активные годы",
+    "hIndex": "h-индекс",
+    "totalCitations": "Всего цитирований",
+    "avgCitationsPerPaper": "Ср. цитирований/статья",
+    "coAuthors": "Соавторы",
+    "noPublicationsFound": "Публикации не найдены",
+    "tryAdjustingSearch": "Попробуйте изменить критерии поиска или фильтрации.",
+    "citations": "Цитирования",
+    "openAccess": "Открытый доступ",
+    "previous": "Предыдущая",
+    "next": "Следующая",
     "year": "Год",
     "journal": "Журнал",
     "authors": "Авторы",
     "abstract": "Аннотация",
     "viewPDF": "Просмотр PDF",
-    "viewOnPubMed": "Просмотр на PubMed"
+    "viewOnPubMed": "Просмотр на PubMed",
+    "copyCitation": "Копировать цитату",
+    "copied": "Скопировано!"
   },
   "footer": {
     "quickLinks": "Быстрые ссылки",
     "connectWithUs": "Свяжитесь с нами",
     "followUs": "Следите за нами в социальных сетях",
     "allRightsReserved": "Все права защищены"
+  },
+  "liveSurgery": {
+    "title": "Живая Хирургия",
+    "subtitle": "Присоединяйтесь к нашим интерактивным трансляциям хирургических операций и учитесь на процедурах в реальном времени",
+    "cwaTitle": "Cornea Web Academy (CWA)",
+    "introText": "предлагает вам возможность войти в операционную проф. Массимо Бузина и подключиться напрямую к его микроскопу через высокоскоростную HD-видеотрансляцию (доступно на английском и итальянском языках)",
+    "broadcasting": {
+      "title": "Живая Хирургическая Трансляция",
+      "description": "На каждой сессии все хирургические вмешательства выполняются и обсуждаются вживую. Трансляция адресована как начинающим хирургам, так и более опытным коллегам."
+    },
+    "interactive": {
+      "title": "Интерактивное Участие",
+      "description": "Задавайте вопросы и получайте объяснения в реальном времени непосредственно от хирурга или просто наблюдайте и слушайте обсуждение в режиме только просмотра."
+    },
+    "specialized": {
+      "title": "Специализированные Хирургические Темы",
+      "description": "Каждая операция фокусируется на конкретных темах, включая DALK, DMEK, UT-DSAEK, DSAEK в PK и DALK в PK, с минимум 2 процедурами, выполняемыми и обсуждаемыми за операцию."
+    }
+  },
+  "contacts": {
+    "title": "Контакты",
+    "subtitle": "Свяжитесь с командой CWA для запросов, поддержки или сотрудничества",
+    "sendMessage": "Отправьте нам сообщение",
+    "firstName": "Имя",
+    "lastName": "Фамилия",
+    "email": "Электронная почта",
+    "subject": "Тема",
+    "selectSubject": "Выберите тему",
+    "generalInquiry": "Общий запрос",
+    "technicalSupport": "Техническая поддержка",
+    "membership": "Членство",
+    "collaboration": "Сотрудничество",
+    "mediaInquiry": "Запрос СМИ",
+    "message": "Сообщение",
+    "notRobot": "Я не робот",
+    "sendButton": "Отправить сообщение",
+    "captchaError": "Пожалуйста, подтвердите, что вы не робот",
+    "successMessage": "Сообщение успешно отправлено!",
+    "getInTouch": "Свяжитесь с нами",
+    "address": "Адрес",
+    "phone": "Телефон",
+    "location": "Местоположение"
   },
   "common": {
     "loading": "Загрузка...",
